--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodebb-plugin-finder",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "finds plugins that you can install for NodeBB",
   "main": "library.js",
   "scripts": {
@@ -25,7 +25,68 @@
   "dependencies": {
     "winston": "~0.7.2",
     "async": "~0.2.8",
-    "npm-package-search": "~0.1.0"
+    "npm-package-search": {
+      "version": "0.1.0",
+      "from": "npm-package-search@0.1.0",
+      "resolved": "http://registry.npmjs.org/npm-package-search/-/npm-package-search-0.1.0.tgz",
+      "dependencies": {
+        "quotemeta": {
+          "version": "0.0.0",
+          "from": "quotemeta@~0.0.0"
+        },
+        "npm-package-sync": {
+          "version": "0.1.0",
+          "from": "npm-package-sync@~0.1.0",
+          "dependencies": {
+            "inherits": {
+              "version": "1.0.0",
+              "from": "inherits@~1.0.0"
+            },
+            "JSONStream": {
+              "version": "0.4.4",
+              "from": "JSONStream@~0.4.3",
+              "dependencies": {
+                "jsonparse": {
+                  "version": "0.0.5",
+                  "from": "jsonparse@0.0.5",
+                  "resolved": "http://registry.npmjs.org/jsonparse/-/jsonparse-0.0.5.tgz"
+                }
+              }
+            },
+            "request": {
+              "version": "2.12.0",
+              "from": "request@~2.12.0",
+              "dependencies": {
+                "form-data": {
+                  "version": "0.0.3",
+                  "from": "form-data",
+                  "dependencies": {
+                    "combined-stream": {
+                      "version": "0.0.3",
+                      "from": "combined-stream@0.0.3",
+                      "dependencies": {
+                        "delayed-stream": {
+                          "version": "0.0.5",
+                          "from": "delayed-stream@0.0.5"
+                        }
+                      }
+                    },
+                    "async": {
+                      "version": "0.1.9",
+                      "from": "async@0.1.9"
+                    }
+                  }
+                },
+                "mime": {
+                  "version": "1.2.7",
+                  "from": "mime"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
   },
   "homepage": "https://github.com/bdharrington7/nodebb-plugin-finder",
   "devDependencies": {}
