Update with nbbpm version info
just in case someone is actually still on 0.4.0 or below

--- a/package.json
+++ b/package.json
@@ -30,4 +30,7 @@
   },
   "homepage": "https://github.com/bdharrington7/nodebb-plugin-finder",
   "devDependencies": {}
+  "nbbpm": {
+    "compatibility": "<=0.4.0"
+  }
 }
